Platforms without USE(REQUEST_ANIMATION_FRAME_DISPLAY_MONITOR) don't need to query the page's displayID https://bugs.webkit.org/show_bug.cgi?id=81187

Reviewed by Simon Fraser.

* dom/Document.cpp:
(WebCore::Document::webkitRequestAnimationFrame):

Canonical link: https://commits.webkit.org/98383@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110821 268f45cc-cd09-0410-ab3c-d52691b4dbfc